# omidb

./: CHANGELOG.md  LICENSE  README.md  bitbucket-pipelines.yml  lint.sh  mypy.ini  pyproject.toml  requirements.txt
docs/: build_api.sh
docs/source/: api-classificationtools.rst  api-client.rst  api-db.rst  api-episode.rst  api-events.rst  api-filters.rst  api-image.rst  api-mark.rst  api-series.rst  api-study.rst  conf.py  getting_started.rst  index.rst  structure.rst
examples/: B_priors.py  counts.py  extract-biopsy-wide-lesion-opinions.py  find_priors.py  invasive-in-situ-grade.py  meta_to_csv.py  screening_studies.py
omidb/: __init__.py  classificationtools.py  client.py  client_parser.py  episode.py  events.py  filters.py  image.py  lesion.py  mark.py  parser.py  series.py  study.py  utilities.py
omidb/commands/: __init__.py  summarise.py
tests/: test_classify_client.py  test_db_parsing.py  test_enums.py  test_episode.py  test_episode_classification.py  test_episode_opinions.py  test_episode_status.py  test_has_prior.py  test_lesion_properties.py  test_parse_lesion.py  test_parse_mark.py
tests/commands/: test_summarise.py
